<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AstroCatalog2</string>
    <string name="action_settings">Settings</string>
    <string name="settings_astro_object_types">Typy objektů</string>
    <string name="settings_astro_object_types_sumary">Typy astronomických objektů které se budou filtrovat.</string>
    <string name="app_settings">Nastavení aplikace</string>
    <string name="filter_object">Viditelnost</string>
    <string name="max_magnitude">Maximální magnituda</string>
    <string name="max_magnitude_dialog">Maximální magnituda zobrazených objektů</string>
    <string name="not_known">Nezjištěno</string>

    <!-- title aktivit -->
    <string name="title_activity_pointer">PointerActivity</string>
    <string name="title_activity_object_detatil">ObjectDetatil</string>
    <string name="title_object_list">ObjectList</string>
    <string name="title_diary">Deník</string>
    <string name="title_diary_detail">Deník detail</string>

    <!-- Jména typů objektů -->
    <string name="object_type_open_cluser">Otevřená hvězdokupa</string>
    <string name="object_type_global_cluser">Kulová hvězdokupa</string>
    <string name="object_type_planetary_nebula">Planetární mlhovina</string>
    <string name="object_type_diffuse_nebula">Difůzní mlhovina</string>
    <string name="object_type_spiral_galaxy">Spirální galexie</string>
    <string name="object_type_elyptical_galaxy">Eliptická galexie</string>
    <string name="object_type_iregullar_galaxy">Nepravidelná galaxie</string>
    <string name="object_type_binary">Dvojhvězda</string>
    <!-- Detail -->

    <string name="object_detail_pointer_button">Pointer</string>
    <string name="object_detail_azimuth_label">Azimuth:</string>
    <string name="object_detail_altitude_label">Výška nad obzorem:</string>
    <string name="object_detail_hourangle_label">Hodinový úhel:</string>
    <string name="object_detail_constellation_label">Souhvězdí:</string>
    <string name="object_detail_type_label">Typ objektu:</string>
    <string name="object_detail_distance_label">Vzdálenst:</string>
    <string name="object_detail_magnitude_label">Magnituda:</string>
    <string name="object_detail_rectascense_label">Rektascenze:</string>
    <string name="object_detail_declination_label">Deklinace:</string>
    <!-- List Adapter -->
    <string name="adapter_magnitude_short">Mag: </string>

    <!-- Pointer -->
    <string name="cardinal_north">S</string>
    <string name="cardinal_south">J</string>
    <string name="cardinal_east">V</string>
    <string name="cardinal_west">Z</string>
    <!-- Menu -->
    <string name="menu_main">Nastavení</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- API -->
    <string name="login">Login</string>
    <string name="password">Heslo</string>

    <!-- accountType -->
    <string name="accountType">cz.uhk.machacekgoogle.astroCatalog</string>
    <string name="settings">Settings</string>

    <string name="catalog">Katalog</string>
    <string name="title_activity_main">MainActivity</string>


</resources>