<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detail_object_name"
                style="@style/style_h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_rectascense_label" />

            <TextView
                android:id="@+id/detail_object_right_ascension"
                style="@style/style_detail_object_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_declination_label" />

            <TextView
                android:id="@+id/detail_object_declination"
                style="@style/style_detail_object_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_magnitude_label" />

            <TextView
                android:id="@+id/detail_object_magnitude"
                style="@style/style_detail_object_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_distance_label" />

            <TextView
                android:id="@+id/detail_object_distance"
                style="@style/style_detail_object_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_type_label" />

            <TextView
                android:id="@+id/detail_object_type"
                style="@style/style_detail_object_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_constellation_label" />

            <TextView
                android:id="@+id/detail_constellation"
                style="@style/style_detail_object_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_hourangle_label" />

            <TextView
                android:id="@+id/detail_object_hour_angle"
                style="@style/style_detail_object_value_text_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_altitude_label" />

            <TextView
                android:id="@+id/detail_object_altitude"
                style="@style/style_detail_object_value_text_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object_detail_azimuth_label" />

            <TextView
                android:id="@+id/detail_object_azimuth"
                style="@style/style_detail_object_value_text_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/pointer_button_view"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/detail_object_pointer_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_detail_pointer_button" />
    </LinearLayout>

</LinearLayout>